Bug 394977 - tooltip from a button in window decoration remains on screen during some seconds when the window is closed via keyboard shortcut
Summary: tooltip from a button in window decoration remains on screen during some seco...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.12.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D13299
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-03 01:25 UTC by Patrick Silva
Modified: 2018-06-10 07:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.13.1
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-06-03 01:25:47 UTC
reproducible on Arch Linux (plasma 5.13 beta) and neon dev unstable

open dolphin
hover some button in window decoration and wait for its tooltip
while the tooltip is visible, press ctrl+q to close dolphin
the tooltip takes some seconds to disappear
Comment 1 Martin Flöser 2018-06-03 11:31:44 UTC
Possible patch at: https://phabricator.kde.org/D13299
Comment 2 Martin Flöser 2018-06-10 07:19:38 UTC
Git commit c44adda40f47418ce6eea974b2a3c3b1e77fa205 by Martin Flöser.
Committed on 10/06/2018 at 07:18.
Pushed by graesslin into branch 'Plasma/5.13'.

Hide decoration tooltip when the decoration gets destroyed

Summary:
FIXED-IN: 5.13.1

Test Plan: Manual testing

Reviewers: #kwin, #plasma

Subscribers: kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D13299

M  +8    -1    decorations/decoratedclient.cpp
M  +1    -0    decorations/decoratedclient.h

https://commits.kde.org/kwin/c44adda40f47418ce6eea974b2a3c3b1e77fa205